Ticket #32400: Fix browser chrome font on mobile, serve source code pro to ensure availability on all OSs

--- a/website/static/website/css/init/_constants.scss
+++ b/website/static/website/css/init/_constants.scss
@@ -32,6 +32,8 @@ $font-tisapro-bold: 'tisaprobold', 'Georgia', serif;
 $font-tisapro-italic: 'tisaproitalic', 'Georgia', serif;
 $font-tisapro-bold-italic: 'tisaproitalicbold', 'Georgia', serif;
 
+$font-sourcecodepro-regular: 'source_code_proregular', monospace;
+
 // Font sizes
 $base-root-font-size: 18px;
 $base-font-size: 18px;
