--- a/website/static/website/css/init/_fonts.scss
+++ b/website/static/website/css/init/_fonts.scss
@@ -74,3 +74,13 @@
   font-weight: normal;
   font-style: normal;
 }
+
+// Source Code Pro
+
+@font-face {
+    font-family: 'source_code_proregular';
+    src: url('../fonts/sourcecodepro/sourcecodepro-regular-webfont.woff2') format('woff2'),
+         url('../fonts/sourcecodepro/sourcecodepro-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
