--- a/website/static/website/css/modules/features/_browser-chrome.scss
+++ b/website/static/website/css/modules/features/_browser-chrome.scss
@@ -5,3 +5,7 @@
 .browser-chrome--mobile {
   @include browser-chrome-mobile();
 }
+
+.browser-chrome--text {
+  font-family: $font-sourcecodepro-regular;
+}
